samples/_failures_safe/1761621901_278b37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2781ec4f.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_2781ec4f.c:163:17: error: expected expression at end of input
  163 |                 (current_char == '=' && next_char == '=') ||
      |                 ^
./samples/SAFE/__tmp_2781ec4f.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2781ec4f.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2781ec4f.c:163:17: error: expected declaration or statement at end of input
